include/asterisk/pbx.h
@@ -483,8 +483,12 @@ void ast_pbx_hangup_handler_push(struct ast_channel *chan, const char *handler);
  * \param callerid pattern to match CallerID, or NULL to match any CallerID
  * \param application application to run on the extension with that priority level
  * \param data data to pass to the application
- * \param datad
+ * \param datad a pointer to a function that will deallocate \c data when needed
+ *              or NULL if \c data does not need to be freed.
  * \param registrar who registered the extension
+ *
+ * \note On any failure, the function pointed to by \c datap will be called and passed the
+ *       \c data pointer.
  *
  * \retval 0 success
  * \retval -1 failure
@@ -507,7 +511,7 @@ int ast_add_extension2(struct ast_context *con, int replace, const char *extensi
  * \since 12.0.0
  *
  * \note con must be write locked prior to calling. For details about the arguments,
- *       check ast_add_extension2()
+ *       check ast_add_extension()
  */
 int ast_add_extension2_nolock(struct ast_context *con, int replace, const char *extension,
 	int priority, const char *label, const char *callerid,
